--- a/contato.html
+++ b/contato.html
@@ -41,7 +41,7 @@
 
     <main>
       <div class="container">
-          <form action="" method="get">
+          <form action="https://httpbin.org/post" method="post">
             <fieldset>
               <legend>Contato</legend>
               <label>
@@ -59,6 +59,7 @@
                 <input
                   type="email"
                   class="email"
+                  name="email"
                   required
                   placeholder="email"
                 />
