--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Din Din - Educação Financeira</title>
+
+    <!-- frescurinhas extra -->
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
+
+     <!-- meta tags do Facebook -->
+     <meta property="og:title" content="Din Din - Blog"/>
+     <meta property="og:type" content="school"/>
+     <meta property="og:description" content="Confira os nossos posts mais recentes e descubra tudo o que você sempre quis saber sobre economia"/>
+     <meta property="og:image" content="https://raw.githubusercontent.com/Beatriz-Sanchez/xp42-dindin/main/assets/images/ilustra-blog.png"/>
+     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Beatriz-Sanchez/xp42-dindin/main/assets/images/ilustra-blog.png" /> 
+     <meta property="og:image:type" content="image/png" /> 
+
+    <title>Din Din - Blog</title>
 
     <link
       rel="stylesheet"
@@ -152,8 +164,8 @@
         </nav>
         <div>
           <ul class="links-anexos">
-            <li><a href="#">Quero ser prof</a></li>
-            <li><a href="#">Aqui tem outro link</a></li>
+            <li><a href="contato.html">Quero ser prof</a></li>
+            <li><a href="example.net">Aqui tem outro link</a></li>
           </ul>
         </div>
       </div>
