--- a/curso.html
+++ b/curso.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Din Din - Educação Financeira</title>
+    <!-- frescurinhas extra -->
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
+
+     <!-- meta tags do Facebook -->
+     <meta property="og:title" content="Din Din - Investimento para iniciantes"/>
+     <meta property="og:type" content="school"/>
+     <meta property="og:description" content="Aprenda em poucas horas a investir de maneira inteligente!"/>
+     <meta property="og:image" content="https://raw.githubusercontent.com/Beatriz-Sanchez/xp42-dindin/main/assets/images/investimento.png"/>
+     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Beatriz-Sanchez/xp42-dindin/main/assets/images/investimento.png" /> 
+     <meta property="og:image:type" content="image/png" /> 
+
+    <title>Din Din - Investimento para iniciantes</title>
 
     <link
       rel="stylesheet"
