--- a/cursos.html
+++ b/cursos.html
@@ -57,19 +57,19 @@
                 <section class="curso" id="investimento">
                     <h2>Investimento para iniciantes</h2>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
-                    <a href="curso.html"><span>começar agora</span></a>
+                    <a href="investimento.html"><span>começar agora</span></a>
                 </section>
                 <hr>
                 <section class="curso" id="poupando">
                     <h2>Poupando e Rendendo</h2>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                    <a href="curso.html"><span>começar agora</span></a>
+                    <a href="poupando.html"><span>começar agora</span></a>
                 </section>
                 <hr>
                 <section class="curso" id="independencia">
                     <h2>Independência Financeira</h2>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                    <a href="curso.html"><span>começar agora</span></a>
+                    <a href="independencia.html"><span>começar agora</span></a>
                 </section>
             </article>
         </div>
@@ -90,7 +90,7 @@
             <div>
                 <ul class="links-anexos">
                     <li><a href="contato.html">Quero ser prof</a></li>
-                    <li><a href="example.net">Aqui tem outro link</a></li>
+                    <li><a href="https://example.net">Aqui tem outro link</a></li>
                 </ul>
             </div>
         </div>
