--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               Duis aute irure dolor in reprehenderit in voluptate velit es se
               cillum dolore eu fugiat nulla pariatur.
             </p>
-            <a href="curso.html"><span>começar agora</span></a>
+            <a href="investimento.html"><span>começar agora</span></a>
           </section>
           <section class="curso" id="poupando">
             <h2>Poupando e Rendendo</h2>
@@ -73,7 +73,7 @@
               Duis aute irure dolor in reprehenderit in voluptate velit es se
               cillum dolore eu fugiat nulla pariatur.
             </p>
-            <a href="curso.html"><span>começar agora</span></a>
+            <a href="poupando.html"><span>começar agora</span></a>
           </section>
           <section class="curso" id="independencia">
             <h2>Independência Financeira</h2>
@@ -81,7 +81,7 @@
               Duis aute irure dolor in reprehenderit in voluptate velit es se
               cillum dolore eu fugiat nulla pariatur.
             </p>
-            <a href="curso.html"><span>começar agora</span></a>
+            <a href="independencia.html"><span>começar agora</span></a>
           </section>
         </article>
 
@@ -221,7 +221,7 @@
         <div>
           <ul class="links-anexos">
             <li><a href="contato.html">Quero ser prof</a></li>
-            <li><a href="example.net">Aqui tem outro link</a></li>
+            <li><a href="https://example.net">Aqui tem outro link</a></li>
           </ul>
         </div>
       </div>
