--- a/post.html
+++ b/post.html
@@ -66,7 +66,7 @@
             <div>
                 <ul class="links-anexos">
                     <li><a href="contato.html">Quero ser prof</a></li>
-                    <li><a href="example.net">Aqui tem outro link</a></li>
+                    <li><a href="https://example.net">Aqui tem outro link</a></li>
                 </ul>
             </div>
         </div>
