--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- frescurinhas extra -->
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
 
      <!-- meta tags do Facebook -->
      <meta property="og:title" content="Din Din - Educação financeira"/>
      <meta property="og:type" content="school"/>
      <meta property="og:description" content="aprenda porque educação financeira é tudo de bom!"/>
-     <meta property="og:image" content="https://raw.githubusercontent.com/Beatriz-Sanchez/xp42-dindin/main/assets/images/ilustra-banner.png"/>
-     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Beatriz-Sanchez/xp42-dindin/main/assets/images/ilustra-banner.png" /> 
+     <meta property="og:image" content="https://raw.githubusercontent.com/Beatriz-Sanchez/xp42-dindin/main/assets/images/logo%20verde.png"/>
+     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Beatriz-Sanchez/xp42-dindin/main/assets/images/logo%20verde.png" /> 
      <meta property="og:image:type" content="image/png" /> 
 
     <title>Din Din - Educação Financeira</title>
